--- a/index.html
+++ b/index.html
@@ -11,14 +11,73 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600;700&display=swap"
             rel="stylesheet"
         />
-        <script
-            src="https://kit.fontawesome.com/077d12e354.js"
-            crossorigin="anonymous"
-        ></script>
-        <!-- <i class="fa-solid fa-bars"></i> -->
-
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/media.css" />
     </head>
-    <body></body>
+    <body>
+        <section class="s-1">
+            <div class="container parentbox">
+                <div class="infobox">
+                    <h5>DISCOVER</h5>
+                    <h2>Our Hot Services</h2>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the
+                        industry's standard
+                    </p>
+                </div>
+                <div class="cardwrapper">
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/plane.jpeg" alt="plane" />
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
