--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h4>FLIGHT BOOKING</h4>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry. Lorem.
+                            typesetting industry.
                         </p>
                     </div>
                 </div>
